--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>中国 · 东八区</span>
+                        <span>中国 · 深圳</span>
                     </div>
                 </div>
                 <div class="social-links">
