Add project links (repo and docs) to portfolio

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                             <span>HTML5</span>
                             <span>CSS3</span>
                         </div>
+                        <div class="project-links">
+                            <a href="#" class="link-btn"><i class="fab fa-github"></i> 仓库</a>
+                            <a href="#" class="link-btn"><i class="fas fa-file-alt"></i> 文档</a>
+                        </div>
                     </div>
                 </div>
                 
@@ -173,6 +177,10 @@
                             <span>AI</span>
                             <span>API</span>
                         </div>
+                        <div class="project-links">
+                            <a href="#" class="link-btn"><i class="fab fa-github"></i> 仓库</a>
+                            <a href="#" class="link-btn"><i class="fas fa-file-alt"></i> 文档</a>
+                        </div>
                     </div>
                 </div>
                 
@@ -193,6 +201,10 @@
                             <span>D3.js</span>
                             <span>React</span>
                             <span>Data</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="link-btn"><i class="fab fa-github"></i> 仓库</a>
+                            <a href="#" class="link-btn"><i class="fas fa-file-alt"></i> 文档</a>
                         </div>
                     </div>
                 </div>
