--- a/index.html
+++ b/index.html
@@ -208,6 +208,31 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-placeholder">
+                            <i class="fas fa-dna"></i>
+                        </div>
+                        <div class="project-overlay">
+                            <a href="https://github.com/zunyun-Gong/antismash_jsonFile" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/zunyun-Gong/antismash_jsonFile" class="project-github" target="_blank"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>antiSMASH JSON Parser</h3>
+                        <p>从 antiSMASH 的 JSON 输出中提取生物信息学数据，用于基因组分析。</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Bioinformatics</span>
+                            <span>JSON</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/zunyun-Gong/antismash_jsonFile" class="link-btn" target="_blank"><i class="fab fa-github"></i> 仓库</a>
+                            <a href="https://github.com/zunyun-Gong/antismash_jsonFile/blob/main/README.md" class="link-btn" target="_blank"><i class="fas fa-file-alt"></i> 文档</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
