Add interactive games: Sudoku and Bubble Game

--- a/index.html
+++ b/index.html
@@ -153,8 +153,33 @@
                             <span>CSS3</span>
                         </div>
                         <div class="project-links">
+                            <a href="games/sudoku_web.html" class="link-btn btn-play" target="_blank"><i class="fas fa-play"></i> 开始游戏</a>
                             <a href="#" class="link-btn"><i class="fab fa-github"></i> 仓库</a>
-                            <a href="#" class="link-btn"><i class="fas fa-file-alt"></i> 文档</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-placeholder" style="background: linear-gradient(135deg, rgba(255,105,180,0.2), rgba(255,20,147,0.2));">
+                            <i class="fas fa-beer" style="color: #ff69b4;"></i>
+                        </div>
+                        <div class="project-overlay">
+                            <a href="games/bubble_game.html" class="project-link" target="_blank"><i class="fas fa-play"></i></a>
+                            <a href="#" class="project-github"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>都是泡沫</h3>
+                        <p>3D 互动小游戏，操控黄色小人收集粉色啤酒，喝酒打嗝趣味十足！</p>
+                        <div class="project-tags">
+                            <span>Three.js</span>
+                            <span>WebGL</span>
+                            <span>Game</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="games/bubble_game.html" class="link-btn btn-play" target="_blank"><i class="fas fa-play"></i> 开始游戏</a>
+                            <a href="#" class="link-btn"><i class="fab fa-github"></i> 仓库</a>
                         </div>
                     </div>
                 </div>
